# haskell-core-semantics

./: .gitignore  .travis.yml  LICENSE  Let-6.pkore.out  Makefile  README.md  sample.core  setup.sh
compile-to-core/: .gitignore  LICENSE  README.md  compile-to-core.cabal  stack.yaml
compile-to-core/app/: Main.hs
compile-to-core/files/: Preamble.pkore
compile-to-core/test/: .gitignore  Foo.hs  test.sh
docs/: RESOURCES.md
sample/: Hello.hcr  gen_core.sh
sample/haskell/: Bool.hs  Identity.hs  List.hs
script/: compile_haskell.sh  krunhaskell.sh
src/: Makefile  haskell-core-execution.k  haskell-core-syntax.k  haskell-core.k  lambda.core  sample.core  types-syntax.k  types.k
src/old-stuff/: haskell-core.k  types-syntax.k
test/: Test.pkore  config.xml  gen_core.sh  kast_all.sh  test_all.sh
test/haskell/: Bool.hs  Bools.hs  BouncyNumbers.hs  Cases.hs  ChurchBool.hs  ChurchNat.hs  ChurchNat2.hs  ChurchNat3.hs  Compose.hs  Disequality.hs  Equality.hs  Identity.hs  Imports.hs  Integer.hs  Integers.hs  LetRec.hs  Map.hs  Nats.hs  Primes.hs  Rationals.hs  Seventeen.hs  Sum.hs
test/pkore-samples/: Case-2.pkore  Case.pkore  ChurchBool.pkore  ChurchBool.pkore.out  ChurchNat.pkore  ChurchNat2.pkore  ChurchNat3.pkore  Equality.pkore  Identity.pkore.out  Lambda.pkore  Lambda.pkore.out  Let-1.pkore  Let-1.pkore.out  Let-2.pkore  Let-2.pkore.out  Let-3.pkore  Let-3.pkore.out  Let-4.pkore  Let-4.pkore.out  Let-5.pkore  Let-5.pkore.out  Let-6.pkore  Nats.pkore
