name:                compile-to-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ayberkt/compile-to-core#readme
license:             BSD3
license-file:        LICENSE
author:              Ayberk Tosun
maintainer:          ayberk.tosun@gmail.com
copyright:           Ayberk Tosun 2015
category:            Natural language processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable to-core
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O0 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10.8.1
                     , ghc >= 8.0.2
                     , ghc-paths >= 0.1.0.9
                     , compile-to-core
  default-language:    Haskell2010

test-suite compile-to-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , compile-to-core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ayberkt/compile-to-core
